--- a/FabrieBank.Common/FabrieBank.Common.csproj
+++ b/FabrieBank.Common/FabrieBank.Common.csproj
@@ -21,5 +21,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Npgsql" Version="7.0.4" />
   </ItemGroup>
 </Project>
