--- a/FabrieBank.DAL/FabrieBank.DAL.csproj
+++ b/FabrieBank.DAL/FabrieBank.DAL.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FabrieBank.Common\FabrieBank.Common.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="7.0.4" />
+  </ItemGroup>
 </Project>
