--- a/FabrieBank/FabrieBank.csproj
+++ b/FabrieBank/FabrieBank.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FabrieBank.Common\FabrieBank.Common.csproj" />
     <ProjectReference Include="..\FabrieBank.Entity\FabrieBank.Entity.csproj" />
+    <ProjectReference Include="..\FabrieBank.BLL\FabrieBank.BLL.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
