--- a/FabrieBank.Services/FabrieBank.Services.csproj
+++ b/FabrieBank.Services/FabrieBank.Services.csproj
@@ -10,4 +10,7 @@
     <ProjectReference Include="..\FabrieBank.Common\FabrieBank.Common.csproj" />
     <ProjectReference Include="..\FabrieBank.DAL\FabrieBank.DAL.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
