--- a/FabrieBank.DAL/FabrieBank.DAL.csproj
+++ b/FabrieBank.DAL/FabrieBank.DAL.csproj
@@ -11,5 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="7.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
