--- a/FabrieBank/FabrieBank.csproj
+++ b/FabrieBank/FabrieBank.csproj
@@ -8,13 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FabrieBank.Common\FabrieBank.Common.csproj" />
-    <ProjectReference Include="..\FabrieBank.Entity\FabrieBank.Entity.csproj" />
-    <ProjectReference Include="..\FabrieBank.BLL\FabrieBank.BLL.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FabrieBank.BLL\FabrieBank.BLL.csproj" />
+    <ProjectReference Include="..\FabrieBank.DAL\FabrieBank.DAL.csproj" />
   </ItemGroup>
 </Project>
