--- a/FabrieBank.Admin/FabrieBank.Admin.csproj
+++ b/FabrieBank.Admin/FabrieBank.Admin.csproj
@@ -16,18 +16,16 @@
     <None Remove="PL\" />
     <None Remove="BLL\" />
     <None Remove="DAL\" />
-    <None Remove="DAL\Common\" />
-    <None Remove="DAL\Common\DTO\" />
     <None Remove="DAL\Entity\" />
     <None Remove="BLL\Logic\" />
+    <None Remove="DAL\DTO\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="PL\" />
     <Folder Include="BLL\" />
     <Folder Include="DAL\" />
-    <Folder Include="DAL\Common\" />
-    <Folder Include="DAL\Common\DTO\" />
     <Folder Include="DAL\Entity\" />
     <Folder Include="BLL\Logic\" />
+    <Folder Include="DAL\DTO\" />
   </ItemGroup>
 </Project>
